# sc2creativity

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  run_notebook.sh  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: Autoencoder - density.ipynb  Autoencoder - kmeans.ipynb  Autoencoder - selfdistance.ipynb  Autoencoder.ipynb  Explore summaries.ipynb
notebooks/.ipynb_checkpoints/: Autoencoder - density-checkpoint.ipynb  Autoencoder - kmeans-checkpoint.ipynb  Autoencoder - selfdistance-checkpoint.ipynb  Autoencoder-checkpoint.ipynb  Explore summaries-checkpoint.ipynb
sc2creativity/: fixkeras.py  models.py  run.py  types.py  utils.py
sc2creativity/features/: replay_dataframes.py  summaries.py
sc2creativity/models/: find_replay.py
tests/: test_sc2creativity.py
