[tool.poetry]
name = "sc2creativity"
version = "0.1.0"
description = ""
authors = ["Mike Axiak <mike@axiak.net>"]

[tool.poetry.dependencies]
python = "^3.8"
sc2reader = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
