[tool.poetry]
name = "sc2creativity"
version = "0.1.0"
description = ""
authors = ["Mike Axiak <mike@axiak.net>"]

[tool.poetry.dependencies]
python = "^3.8"
sc2reader = "^1.5.0"
click = "^7.1.1"
Sphinx = "^3.0.2"
flake8 = "^3.7.9"
awscli = "^1.18.46"
python-dotenv = "^0.13.0"
pandas = "^1.0.3"
tables = "^3.6.1"
jupyter = "^1.0.0"
umap-learn = {extras = ["plot"], version = "^0.4.1"}
matplotlib = "^3.2.1"
tensorflow-gpu = "2.5.1"
keras = "^2.3.1"
seaborn = "^0.10.0"
pydot = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
build_summaries = 'sc2creativity.features.summaries:build_summaries'
build_dataframes = 'sc2creativity.features.replay_dataframes:build_dataframes'
find_replay = 'sc2creativity.models.find_replay:find_replay'


[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

